--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,8 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+
+
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -15,7 +17,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #afb8ca; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
